[gd_scene load_steps=2 format=3 uid="uid://denfqgiat465h"]

[ext_resource type="Script" path="res://scenes/menu/join_menu/server_node/server_node.gd" id="1_sm4ug"]

[node name="ServerNode" type="MarginContainer"]
offset_right = 1280.0
offset_bottom = 48.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
script = ExtResource("1_sm4ug")

[node name="EntryContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InfoContainer" type="HBoxContainer" parent="EntryContainer"]
layout_mode = 2

[node name="LobbyName" type="Label" parent="EntryContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lobby"

[node name="ServerAddress" type="Label" parent="EntryContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0.0.0.0:0"

[node name="PlayerCount" type="Label" parent="EntryContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0/0"

[node name="SelectButton" type="Button" parent="EntryContainer/InfoContainer"]
custom_minimum_size = Vector2(165, 40)
layout_mode = 2
size_flags_vertical = 4
text = "Wybierz"

[node name="Separator" type="HSeparator" parent="EntryContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[connection signal="pressed" from="EntryContainer/InfoContainer/SelectButton" to="." method="_on_button_pressed"]
